--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,11 +22,8 @@ body {
   flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #f4f4f4;
+  background-color: var(--background-light);
   /* Fancy grid background for visual interest? */
-  background-image: radial-gradient(#00000020 1px, transparent 0);
-  background-size: 40px 40px;
-  background-position: -19px -19px;
 }
 
 h1 {
